# opentako

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
assets/: lexicon_1.json
assets/html/: index.html
assets/html/assets/: index-BKgyXGnn.js  index-DBcR2Ire.css
src/: config.rs  engine.rs  main.rs  server.rs  tray.rs
